--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   backend:
     build:
       context: ./backend
+    image: nomanakram29/reactjs-flask-backend:${IMAGE_TAG}
     container_name: flask-backend
     ports:
       - "5000:5000"
@@ -18,6 +19,7 @@ services:
   frontend:
     build:
       context: ./frontend
+    image: nomanakram29/reactjs-flask-frontend:${IMAGE_TAG}
     container_name: react-frontend
     ports:
       - "5173:5173"
