--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -7,11 +8,6 @@ metadata:
     app: react-flask-app
 spec:
   replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
   selector:
     matchLabels:
       app: react-flask-app
@@ -20,7 +16,6 @@ spec:
       labels:
         app: react-flask-app
     spec:
-      serviceAccountName: react-flask-sa
       containers:
         - name: flask-backend
           image: nomanakram29/reactjs-flask-backend:latest
@@ -39,31 +34,37 @@ spec:
           ports:
             - containerPort: 5173
           imagePullPolicy: Always
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   namespace: react-flask-app
   name: flask-backend-service
+  labels:
+    app: react-flask-app
 spec:
+  type: ClusterIP
   selector:
     app: react-flask-app
   ports:
     - protocol: TCP
       port: 5000
       targetPort: 5000
-  type: ClusterIP
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   namespace: react-flask-app
   name: react-frontend-service
+  labels:
+    app: react-flask-app
 spec:
+  type: LoadBalancer
   selector:
     app: react-flask-app
   ports:
     - protocol: TCP
       port: 80
       targetPort: 5173
-  type: LoadBalancer
