--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -2,8 +2,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: react-flask-app
   name: react-flask-app
+  namespace: react-flask-app
   labels:
     app: react-flask-app
 spec:
@@ -23,24 +23,24 @@ spec:
             - containerPort: 5000
           env:
             - name: FLASK_ENV
-              value: production
+              value: "production"
             - name: JWT_SECRET_KEY
-              value: super-secret
+              value: "super-secret"
             - name: SECRET_KEY
-              value: super-secret
+              value: "super-secret"
           imagePullPolicy: Always
+
         - name: react-frontend
           image: nomanakram29/reactjs-flask-frontend:latest
           ports:
             - containerPort: 5173
           imagePullPolicy: Always
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: react-flask-app
   name: flask-backend-service
+  namespace: react-flask-app
   labels:
     app: react-flask-app
 spec:
@@ -48,16 +48,16 @@ spec:
   selector:
     app: react-flask-app
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 5000
       targetPort: 5000
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: react-flask-app
   name: react-frontend-service
+  namespace: react-flask-app
   labels:
     app: react-flask-app
 spec:
@@ -65,6 +65,7 @@ spec:
   selector:
     app: react-flask-app
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 5173
