k8s-deployment.yml indentation correction

--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -63,7 +63,7 @@ metadata:
     app: react-flask-app
 spec:
   type: LoadBalancer
-  selector:
+  selector:                  # Fixed: now correctly aligned with ports
     app: react-flask-app
   ports:
     - name: http
