--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -48,8 +48,8 @@ spec:
   selector:
     app: react-flask-app
   ports:
-    - protocol: TCP
-      name: http
+    - name: http
+      protocol: TCP
       port: 5000
       targetPort: 5000
 
@@ -66,7 +66,7 @@ spec:
   selector:
     app: react-flask-app
   ports:
-    - protocol: TCP
-      name: http
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 5173
